--- a/demo/DNZ.MvcComponents.Demo/Views/Home/Toastr.cshtml
+++ b/demo/DNZ.MvcComponents.Demo/Views/Home/Toastr.cshtml
@@ -20,7 +20,7 @@
             }
         </td>
         @*<td>
-            @using (Ajax.BeginForm(new AjaxOptions()))
+            @using (Html.AjaxBeginForm(new AjaxOptions()))
             {
                 <input type="submit" value="Submit Ajax" />
             }
