--- a/demo/DNZ.MvcComponents.Demo/Views/Home/BootBox.cshtml
+++ b/demo/DNZ.MvcComponents.Demo/Views/Home/BootBox.cshtml
@@ -7,7 +7,7 @@
 <table>
     <tr>
         <td>
-            <input type="button" value="Click Me" onclick="@Html.BootBox("A message from Client (on click)", BootBoxType.Prompt).Script" />
+            <input type="button" value="Click Me" onclick="@Html.BootBox("A message from Client (on click)", BootBoxType.Prompt).Script" class="btn btn-primary" />
         </td>
         <td>
             @using (Html.BeginForm())
@@ -16,13 +16,13 @@
                 {
                     @Html.BootBox("A message from Client (on pageload)").Title("Your Title").Type(BootBoxType.Confirm)
                 }
-                <input type="submit" value="Submit Form" />
+                <input type="submit" value="Submit Form" class="btn btn-primary" />
             }
         </td>
         <td>
             @using (Html.AjaxBeginForm(new AjaxOptions()))
             {
-                <input type="submit" value="Submit Ajax" />
+                <input type="submit" value="Submit Ajax" class="btn btn-primary" />
             }
         </td>
     </tr>
