--- a/demo/DNZ.MvcComponents.Demo/Views/Home/BsDialog.cshtml
+++ b/demo/DNZ.MvcComponents.Demo/Views/Home/BsDialog.cshtml
@@ -7,7 +7,7 @@
 <table>
     <tr>
         <td>
-            <input type="button" value="Click Me" onclick="@Html.BsDialog("A message from Client (on click)", "Your Title",  DialogType.Warning).Script" />
+            <input type="button" value="Click Me" onclick="@Html.BsDialog("A message from Client (on click)", "Your Title",  DialogType.Warning).Script" class="btn btn-primary" />
         </td>
         <td>
             @using (Html.BeginForm())
@@ -16,13 +16,13 @@
                 {
                     @Html.BsDialog("A message from Client (on pageload)").Title("Your Title").Type(DialogType.Info)
                 }
-                <input type="submit" value="Submit Form" />
+                <input type="submit" value="Submit Form" class="btn btn-primary" />
             }
         </td>
         <td>
             @using (Html.AjaxBeginForm(new AjaxOptions()))
             {
-                <input type="submit" value="Submit Ajax" />
+                <input type="submit" value="Submit Ajax" class="btn btn-primary" />
             }
         </td>
     </tr>
