--- a/demo/DNZ.MvcComponents.Demo/Views/Home/SweetAlertBootstrap.cshtml
+++ b/demo/DNZ.MvcComponents.Demo/Views/Home/SweetAlertBootstrap.cshtml
@@ -7,23 +7,23 @@
 <table>
     <tr>
         <td>
-            <input type="button" value="Click Me" onclick="@Html.SweetAlertBs("A message from Client (on click)", "Your Title", SweetAlertType.Warning).Script" />
+            <input type="button" value="Click Me" onclick="@Html.SweetAlertBs("A message from Client (on click)", "Your Title", SweetAlertIcon.Warning).Script" class="btn btn-primary" />
         </td>
         <td>
             @using (Html.BeginForm())
             {
                 if (Context.Request.Method.ToLower() == "get")
                 {
-                    @Html.SweetAlertBs("A message from Client (on pageload)").Title("Your Title").Type(SweetAlertType.Info)
+                    @Html.SweetAlertBs("A message from Client (on pageload)").Title("Your Title").Type(SweetAlertIcon.Info)
                 }
-                <input type="submit" value="Submit Form" />
+                <input type="submit" value="Submit Form" class="btn btn-primary" />
             }
         </td>
-        @*<td>
+        <td>
             @using (Html.AjaxBeginForm(new AjaxOptions()))
             {
-                <input type="submit" value="Submit Ajax" />
+                <input type="submit" value="Submit Ajax" class="btn btn-primary" />
             }
-        </td>*@
+        </td>
     </tr>
 </table>
