--- a/demo/DNZ.MvcComponents.Demo/Views/Home/Toastr.cshtml
+++ b/demo/DNZ.MvcComponents.Demo/Views/Home/Toastr.cshtml
@@ -7,7 +7,7 @@
 <table>
     <tr>
         <td>
-            <input type="button" value="Click Me" onclick="@Html.Toastr("A message from Client (on click)", "Your Title", ToastrType.Warning).Script" />
+            <input type="button" value="Click Me" onclick="@Html.Toastr("A message from Client (on click)", "Your Title", ToastrType.Warning).Script" class="btn btn-primary" />
         </td>
         <td>
             @using (Html.BeginForm())
@@ -16,14 +16,14 @@
                 {
                     @Html.Toastr("A message from Client (on pageload)").ProgressBar(true).Type(ToastrType.Info)
                 }
-                <input type="submit" value="Submit Form" />
+                <input type="submit" value="Submit Form" class="btn btn-primary" />
             }
         </td>
-        @*<td>
+        <td>
             @using (Html.AjaxBeginForm(new AjaxOptions()))
             {
-                <input type="submit" value="Submit Ajax" />
+                <input type="submit" value="Submit Ajax" class="btn btn-primary" />
             }
-        </td>*@
+        </td>
     </tr>
 </table>
