--- a/demo/DNZ.MvcComponents.Demo/Views/Home/Uploader.cshtml
+++ b/demo/DNZ.MvcComponents.Demo/Views/Home/Uploader.cshtml
@@ -13,5 +13,5 @@
     <div>
         @Html.BsUploadFor(p => p.Images, action: "UploadFile", routeValues: new { accomodationId = 1 }, urlImages: "/")
     </div>
-<input type="submit" value="submit" />
+    <input type="submit" value="Submit" class="btn btn-primary" />
 }
