--- a/demo/DNZ.MvcComponents.Demo/Views/Home/Uploader2.cshtml
+++ b/demo/DNZ.MvcComponents.Demo/Views/Home/Uploader2.cshtml
@@ -13,5 +13,5 @@
     <div>
         @Html.JasnyUploaderFor(p => p.ImagePath, action: "UploadFile2", urlImage: "/")
     </div>
-    <input type="submit" value="submit" />
+    <input type="submit" value="Submit" class="btn btn-primary" />
 }
