--- a/demo/DNZ.MvcComponents.Demo/Views/Home/Index.cshtml
+++ b/demo/DNZ.MvcComponents.Demo/Views/Home/Index.cshtml
@@ -113,8 +113,18 @@
         <a class="btn btn-primary btn-block" href="/Home/Toastr">Toastr</a>
     </div>
 </div>
-
-
-
-
-
+<div class="row">
+    <div class="col-md-2">
+        <a class="btn btn-primary btn-block" href="/Home/TagsInput">TagsInput</a>
+    </div>
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-2">
+    </div>
+</div>
